--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -8,6 +8,4 @@ include LICENSE
 include README.md
 include AXL_DEFECTS.md
 
-global-exclude __pycache__
-global-exclude *.py[cod]
-global-exclude *.so
+global-exclude __pycache__ *.py[cod] *.so
