--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,13 +1,22 @@
-graft src
-graft examples
-graft tests
 graft docs
+graft src
+graft ci
+graft tests
+graft examples
 graft schema
 
+include .bumpversion.cfg
+include .coveragerc
+include .cookiecutterrc
+include .editorconfig
+
+include AUTHORS.rst
+include CHANGELOG.rst
+include CONTRIBUTING.rst
 include LICENSE
-include README.md
+include README.rst
 include AXL_DEFECTS.md
 
-global-exclude __pycache__
-global-exclude *.py[cod]
-global-exclude *.so
+include tox.ini .travis.yml .appveyor.yml
+
+global-exclude *.py[cod] __pycache__/* *.so *.dylib
