--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -15,7 +15,7 @@ include CHANGELOG.rst
 include CONTRIBUTING.rst
 include LICENSE
 include README.rst
-include AXL_DEFECTS.md
+include AXL_DEFECTS.rst
 
 include tox.ini .travis.yml .appveyor.yml
 
