--- a/setup.cfg
+++ b/setup.cfg
@@ -4,7 +4,7 @@ universal = 1
 [flake8]
 max-line-length = 140
 exclude = */migrations/*
-ignore = F401,F403
+ignore = F401,F403,F405
 
 [tool:pytest]
 # If a pytest section is found in one of the possible config files
